--- a/TaskAssessor/Views/Shared/_Layout.cshtml
+++ b/TaskAssessor/Views/Shared/_Layout.cshtml
@@ -21,10 +21,19 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Tasks", "Index", "Jobs")</li>
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    @{
+                        if (User.Identity.IsAuthenticated)
+                        {
+                            <li>@Html.ActionLink("Tasks", "Index", "Jobs")</li>
+                            <li>@Html.ActionLink("MyTasks", "Index", "MyJobs")</li>
+                        }
+                        else
+                        {
+                            <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                            <li>@Html.ActionLink("About", "About", "Home")</li>
+                            <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                        }
+                    }
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
@@ -33,9 +42,16 @@
     <div class="container body-content">
         @RenderBody()
         <hr />
+        <ul class="nav navbar-nav navbar-right">
+            <li>@Html.ActionLink("Home", "Index", "Home")</li>
+            <li>@Html.ActionLink("About", "About", "Home")</li>
+            <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+        </ul>
         <footer>
+
             <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
         </footer>
+
     </div>
 
     @Scripts.Render("~/bundles/jquery")
