--- a/TaskAssessor/Views/MyJobs/Index.cshtml
+++ b/TaskAssessor/Views/MyJobs/Index.cshtml
@@ -6,39 +6,30 @@
 
 <h2>Index</h2>
 
-
-
-@if (!Model.Any())
-{
-    <p>No jobs in here, sry</p>
-}
-else
-{
-    <table class="table table-striped table-hover table-bordered">
-        <thead class="thead-dark">
+<table class="table table-striped table-hover table-bordered">
+    <thead class="thead-dark">
+        <tr>
+            <th>@ViewBag.Date</th>
+            <th>Task</th>
+            <th>Time Added</th>
+            <th>Time Ended</th>
+            <th>Description</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var item in Model)
+            {
             <tr>
-                <th>#</th>
-                <th>Task</th>
-                <th>Time Added</th>
-                <th>Time Ended</th>
-                <th>Description</th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var item in Model)
-                {
-                <tr>
-                    <td>@(++index)</td>
-                    <td>@item.Job.Name</td>
-                    <td>@item.TimeStarted</td>
-                    <td>@item.TimeEnded</td>
-                    <td>@item.Description</td>
+                <td>@(++index)</td>
+                <td>@item.Job.Name</td>
+                <td>@item.TimeStarted</td>
+                <td>@item.TimeEnded</td>
+                <td>@item.Description</td>
 
-                </tr>
-            }
-        </tbody>
-    </table>
-}
+            </tr>
+        }
+    </tbody>
+</table>
 
 <!--
 
@@ -48,3 +39,4 @@ Code released under the MIT License.
 Based on Bootstrap. Icons from Font Awesome. Web fonts from Google.
 
 -->
+
