--- a/TaskAssessor/Views/MyJobs/CreateMyJob.cshtml
+++ b/TaskAssessor/Views/MyJobs/CreateMyJob.cshtml
@@ -27,6 +27,8 @@
         @Html.DropDownListFor(j => j.HourInterval.JobId, new SelectList(Model.Jobs,"Id","Name"),"Select Task", new { @class = "form-control" })
     </div>
 
+
     @Html.HiddenFor(j=> j.HourInterval.Id)
+    @Html.HiddenFor(j => j.HourInterval.ApplicationUserId)
     <button type="submit" class="btn btn-primary">Save</button>
 }
