--- a/TaskAssessor/Views/MyJobs/Index.cshtml
+++ b/TaskAssessor/Views/MyJobs/Index.cshtml
@@ -2,35 +2,48 @@
 @{
     ViewBag.Title = "Index";
     var index = 0;
+    var totalHours = 0.0d;
 }
 
-<h2>Index</h2>
+<h2>My Tasks</h2>
+<h3>@ViewBag.Date</h3>
 
 <table class="table table-striped table-hover table-bordered">
     <thead class="thead-dark">
         <tr>
-            <th>@ViewBag.Date</th>
+            <th>#</th>
             <th>Task</th>
-            <th>Time Added</th>
-            <th>Time Ended</th>
+            <th>Started</th>
+            <th>Ended</th>
             <th>Description</th>
+            <th>Total</th>
         </tr>
     </thead>
     <tbody>
         @foreach (var item in Model)
-            {
+        {
+            totalHours += item.TotalTime;
             <tr>
-                <td>@(++index)</td>
+                <td><b>@(++index)</b> <a href="@Url.Action("Details","MyJobs", new { id = item.Id})">Details</a></td>
                 <td>@item.Job.Name</td>
                 <td>@item.TimeStarted</td>
                 <td>@item.TimeEnded</td>
                 <td>@item.Description</td>
+                <td>@item.TotalTime</td>
 
             </tr>
+          
         }
     </tbody>
 </table>
 
+<p><b>Total Hours :</b> @totalHours h</p>
+@using (Html.BeginForm("Index", "MyJobs", FormMethod.Get))
+{
+    @Html.TextBox("date", null, new { @class = "form-control jqueryui - marker - datepicker" })
+
+    <button type="submit" class="btn btn-primary">Search</button>
+}
 <!--
 
 Back to topBlogRSSTwitterGitHubAPIDonate
@@ -40,3 +53,23 @@ Based on Bootstrap. Icons from Font Awesome. Web fonts from Google.
 
 -->
 
+@section Scripts {
+
+    @Scripts.Render("~/bundles/jqueryui")
+    @Styles.Render("~/Content/cssjqryUi")
+
+    <script type="text/javascript">
+
+        $(document).ready(function () {
+            $('input[class="form-control jqueryui - marker - datepicker"]').datepicker({
+                dateFormat: "dd.m.yy",
+                changeMonth: true,
+                changeYear: true,
+                yearRange: "-1:+0"
+            });
+
+        });
+
+    </script>
+
+}  
