Added validations and changed the functionalities a bit for MyJobs

--- a/TaskAssessor/Views/MyJobs/Index.cshtml
+++ b/TaskAssessor/Views/MyJobs/Index.cshtml
@@ -8,6 +8,7 @@
 <h2>My Tasks</h2>
 <h3>@ViewBag.Date</h3>
 
+<a href="@Url.Action("New","MyJobs")" class="btn btn-primary">Create</a>
 <table class="table table-striped table-hover table-bordered">
     <thead class="thead-dark">
         <tr>
