--- a/TaskAssessor/Views/MyJobs/CreateFormMyJobs.cshtml
+++ b/TaskAssessor/Views/MyJobs/CreateFormMyJobs.cshtml
@@ -5,16 +5,18 @@
 
 <h2>CreateMyJob</h2>
 
-@using (Html.BeginForm("CreateMyJob", "MyJobs"))
+@using (Html.BeginForm("CreateFormMyJobs", "MyJobs"))
 {
     <div class="form-group">
         @Html.LabelFor(j => j.HourInterval.TimeStarted)
         @Html.TextBoxFor(j => j.HourInterval.TimeStarted, new { @class = "form-control" })
+        @Html.ValidationMessageFor(j => j.HourInterval.TimeStarted)
     </div>
 
     <div class="form-group">
         @Html.LabelFor(j => j.HourInterval.TimeEnded)
         @Html.TextBoxFor(j => j.HourInterval.TimeEnded, new { @class = "form-control" })
+        @Html.ValidationMessageFor(j => j.HourInterval.TimeEnded)
     </div>
 
     <div class="form-group">
