--- a/TaskAssessor/Views/MyJobs/Index.cshtml
+++ b/TaskAssessor/Views/MyJobs/Index.cshtml
@@ -63,7 +63,7 @@ Based on Bootstrap. Icons from Font Awesome. Web fonts from Google.
 
         $(document).ready(function () {
             $('input[class="form-control jqueryui - marker - datepicker"]').datepicker({
-                dateFormat: "dd.m.yy",
+                dateFormat: "dd.mm.yy",
                 changeMonth: true,
                 changeYear: true,
                 yearRange: "-1:+0"
